<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity"
    style="@style/AuthBackground">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText">
            <requestFocus/>
         </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            style="@style/AuthEditText"/>

        <EditText
            android:id="@+id/emailField"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            style="@style/AuthEditText" />

    </LinearLayout>

    <ImageView
        android:id="@+id/button_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_button_divider"/>

    <Button
        android:id="@+id/signUpButton"
        style="@style/AuthButton"
        android:text="@string/sign_up_button_label"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/button_divider"
        android:layout_toStartOf="@id/button_divider"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp"/>

    <Button
        android:id="@+id/cancelButton"
        style="@style/AuthButton"
        android:text="@string/cancel_label_button"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/button_divider"
        android:layout_toEndOf="@id/button_divider"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"/>

</RelativeLayout>
